@@ -1,4 +1,3 @@
-
 package com.hamch.customerservice.security;
 
 import org.springframework.context.annotation.Bean;
@@ -7,22 +6,14 @@ import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
-import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.web.cors.CorsConfiguration;
-import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-
-
-import java.util.Arrays;
 
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 	
-    private JwtAuthConverter jwtAuthConverter;
+    private final JwtAuthConverter jwtAuthConverter;
 
     public SecurityConfig(JwtAuthConverter jwtAuthConverter) {
         this.jwtAuthConverter = jwtAuthConverter;
@@ -30,44 +21,54 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-    	
-    	 System.out.println("TTTTTTTTTTTTTvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv");
+
+        System.out.println("TTTTTTTTTTTTTvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv");
         return http
                 .cors(Customizer.withDefaults())
-                .authorizeHttpRequests(ar->ar.requestMatchers("/**").hasAuthority("ADMIN"))
+                .authorizeHttpRequests(ar->ar.requestMatchers("/**").hasAuthority("USER"))
                 .authorizeHttpRequests(ar->ar.requestMatchers("/api/customer/**").hasAuthority("USER"))
                 .authorizeHttpRequests(ar->ar.anyRequest().authenticated())
                 .oauth2ResourceServer((ors->ors.jwt(jwt->jwt.jwtAuthenticationConverter(jwtAuthConverter))))
                 .headers(h->h.frameOptions(fo->fo.disable()))
-            //    .csrf(csrf->csrf.ignoringRequestMatchers("/h2-console/**"))
+                .csrf(csrf->csrf.ignoringRequestMatchers("/h2-console/**"))
                 .build();
     }
-    
-    private static JwtAuthenticationConverter jwtAuthenticationConverter()
-    {
-    //  	 System.out.println("fffffffffffffffffffffffffffff");
 
-        var jwtGrantedAuthoritiesConverter = new JwtGrantedAuthoritiesConverter();
-        jwtGrantedAuthoritiesConverter.setAuthoritiesClaimName("resource_access.user.roles");
-        jwtGrantedAuthoritiesConverter.setAuthorityPrefix("ROLE_");
-        var jwtAuthenticationConverter = new JwtAuthenticationConverter();
-        jwtAuthenticationConverter.setJwtGrantedAuthoritiesConverter(jwtGrantedAuthoritiesConverter);
-        return jwtAuthenticationConverter;
-    }
-   
-    @Bean
+    /* @Bean
+    public JwtDecoder jwtDecoder() {
+
+                System.out.println("MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM111111");
+
+        return NimbusJwtDecoder.withJwkSetUri("http://localhost:7080/realms/microservices-realm/protocol/openid-connect/certs").build();
+    } */
+
+    /* @Bean
     CorsConfigurationSource corsConfigurationSource() {
-      	 System.out.println("rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr");
-
         CorsConfiguration configuration = new CorsConfiguration();
-     //   configuration.addAllowedOrigin(Arrays.asList("http://localhost:4200"));
-        configuration.addAllowedOrigin("http://localhost:4200");
-        configuration.setAllowedMethods(Arrays.asList("*"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedOrigins(List.of("http://localhost:4200"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
-    }
+}  */
+//    @Bean
+//    CorsConfigurationSource corsConfigurationSource() {
+//      	 System.out.println("rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr");
+//
+//        CorsConfiguration configuration = new CorsConfiguration();
+//     //   configuration.addAllowedOrigin(Arrays.asList("http://localhost:4200"));
+//        //configuration.addAllowedOrigin("http://localhost:4200");
+//        configuration.setAllowedOrigins(Arrays.asList("http://localhost:4200"));
+//        configuration.setAllowedMethods(Arrays.asList("*"));
+//        configuration.setAllowedHeaders(Arrays.asList("*"));
+//        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+//        source.registerCorsConfiguration("/**", configuration);
+//        return source;
+//    }
+    
 
 
 }
